#476 paginated collection search endpoint
