# backend-client/.openapi-source/openapi.json
@@ -38,6 +38,8 @@
   }, {
     "name" : "semanticRepository"
   }, {
+    "name" : "spatialDataContainer"
+  }, {
     "name" : "structuredDataContainer"
   }, {
     "name" : "structuredDataReference"
@@ -4771,6 +4773,168 @@
         }
       }
     },
+    "/spatialDataContainer/{spatialDataContainerId}/payload" : {
+      "post" : {
+        "tags" : [ "spatialDataContainer" ],
+        "description" : "Get spatial data by container id",
+        "operationId" : "getSpatialDataPoints",
+        "parameters" : [ {
+          "name" : "spatialDataContainerId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        }, {
+          "name" : "databaseType",
+          "in" : "query",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/DatabaseType"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/SpatialDataParamsIO"
+              }
+            }
+          },
+          "required" : false
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/SpatialDataPoint"
+                  }
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "not found"
+          }
+        }
+      },
+      "patch" : {
+        "tags" : [ "spatialDataContainer" ],
+        "description" : "Adding data points to spatial data container",
+        "operationId" : "createSpatialDataPoints",
+        "parameters" : [ {
+          "name" : "spatialDataContainerId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "format" : "int64",
+            "type" : "integer"
+          }
+        }, {
+          "name" : "databaseType",
+          "in" : "query",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/components/schemas/DatabaseType"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "type" : "array",
+                "items" : {
+                  "$ref" : "#/components/schemas/SpatialDataPoint"
+                }
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/SpatialDataPoint"
+                  }
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "not found"
+          }
+        }
+      }
+    },
+    "/search/collections" : {
+      "post" : {
+        "tags" : [ "search" ],
+        "description" : "Search collections",
+        "operationId" : "searchCollections",
+        "parameters" : [ {
+          "name" : "page",
+          "in" : "query",
+          "schema" : {
+            "format" : "int32",
+            "type" : "integer"
+          }
+        }, {
+          "name" : "size",
+          "in" : "query",
+          "schema" : {
+            "format" : "int32",
+            "type" : "integer"
+          }
+        }, {
+          "name" : "orderBy",
+          "in" : "query",
+          "schema" : {
+            "$ref" : "#/components/schemas/BasicContainerAttributes"
+          }
+        }, {
+          "name" : "orderDesc",
+          "in" : "query",
+          "schema" : {
+            "type" : "boolean"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/CollectionSearchBody"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "ok",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/CollectionSearchResult"
+                }
+              }
+            }
+          },
+          "404" : {
+            "description" : "not found"
+          }
+        }
+      }
+    },
     "/structuredDataContainers/{structuredDataContainerId}/roles" : {
       "get" : {
         "tags" : [ "structuredDataContainer" ],
@@ -5495,6 +5659,10 @@
         "enum" : [ "createdAt", "updatedAt", "name" ],
         "type" : "string"
       },
+      "DatabaseType" : {
+        "enum" : [ "POSTGIS", "PGVECTOR" ],
+        "type" : "string"
+      },
       "RequestMethod" : {
         "enum" : [ "GET", "HEAD", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "TRACE" ],
         "type" : "string"
@@ -5756,6 +5924,15 @@
           "oid" : {
             "type" : "string",
             "readOnly" : true
+          }
+        }
+      },
+      "CollectionSearchBody" : {
+        "required" : [ "searchParams" ],
+        "type" : "object",
+        "properties" : {
+          "searchParams" : {
+            "$ref" : "#/components/schemas/CollectionSearchParams"
           }
         }
       },
@@ -6076,6 +6253,42 @@
           }
         }
       },
+      "SpatialDataPoint" : {
+        "required" : [ "x", "y", "z", "measurements", "metadata" ],
+        "type" : "object",
+        "properties" : {
+          "timestamp" : {
+            "format" : "int64",
+            "description" : "Time in nanoseconds since unix epoch.",
+            "type" : "integer"
+          },
+          "x" : {
+            "format" : "double",
+            "description" : "X Coordinate",
+            "type" : "number"
+          },
+          "y" : {
+            "format" : "double",
+            "description" : "Y Coordinate",
+            "type" : "number"
+          },
+          "z" : {
+            "format" : "double",
+            "description" : "Z Coordinate",
+            "type" : "number"
+          },
+          "measurements" : {
+            "description" : "measurement",
+            "type" : "object",
+            "additionalProperties" : { }
+          },
+          "metadata" : {
+            "description" : "Data point meta data",
+            "type" : "object",
+            "additionalProperties" : { }
+          }
+        }
+      },
       "DataPointValueType" : {
         "enum" : [ "Boolean", "Integer", "Double", "String" ],
         "type" : "string"
@@ -6321,6 +6534,16 @@
         "enum" : [ "MEAN", "MEDIAN", "COUNT", "SUM", "MIN", "MAX", "LAST", "FIRST", "INTEGRAL", "MODE", "SPREAD", "STDDEV" ],
         "type" : "string"
       },
+      "CollectionSearchParams" : {
+        "required" : [ "query" ],
+        "type" : "object",
+        "properties" : {
+          "query" : {
+            "pattern" : "\\S",
+            "type" : "string"
+          }
+        }
+      },
       "UserSearchResult" : {
         "type" : "object",
         "properties" : {
@@ -6468,6 +6691,15 @@
         "properties" : {
           "file" : {
             "$ref" : "#/components/schemas/UploadItemSchema"
+          }
+        }
+      },
+      "AbstractGeometryFilter" : {
+        "description" : "abstract geometry filter",
+        "type" : "object",
+        "properties" : {
+          "type" : {
+            "$ref" : "#/components/schemas/GeometryFilterType"
           }
         }
       },
@@ -6968,6 +7200,57 @@
           }
         }
       },
+      "CollectionSearchResult" : {
+        "required" : [ "results", "totalResults" ],
+        "type" : "object",
+        "properties" : {
+          "searchParams" : {
+            "$ref" : "#/components/schemas/CollectionSearchParams"
+          },
+          "results" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/Collection"
+            }
+          },
+          "totalResults" : {
+            "format" : "int32",
+            "type" : "integer"
+          }
+        }
+      },
+      "SpatialDataParamsIO" : {
+        "type" : "object",
+        "properties" : {
+          "geometryFilter" : {
+            "$ref" : "#/components/schemas/AbstractGeometryFilter"
+          },
+          "metadata" : {
+            "type" : "object",
+            "additionalProperties" : { }
+          },
+          "startTime" : {
+            "format" : "int64",
+            "type" : "integer"
+          },
+          "endTime" : {
+            "format" : "int64",
+            "type" : "integer"
+          },
+          "limit" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
+          "offset" : {
+            "format" : "int32",
+            "type" : "integer"
+          },
+          "skip" : {
+            "format" : "int32",
+            "type" : "integer"
+          }
+        }
+      },
       "BasicReferenceAttributes" : {
         "enum" : [ "createdAt", "updatedAt", "name", "type" ],
         "type" : "string"
@@ -7095,6 +7378,10 @@
             "type" : "string"
           }
         }
+      },
+      "GeometryFilterType" : {
+        "enum" : [ "K_NEAREST_NEIGHBOR", "BOUNDING_SPHERE", "AXIS_ALIGNED_BOUNDING_BOX", "ORIENTED_BOUNDING_BOX" ],
+        "type" : "string"
       },
       "ResultTriple" : {
         "type" : "object",
