# backend/src/main/java/de/dlr/shepard/common/search/endpoints/SearchRest.java
@@ -1,16 +1,20 @@
 package de.dlr.shepard.common.search.endpoints;
 
+import de.dlr.shepard.common.search.io.CollectionSearchBody;
+import de.dlr.shepard.common.search.io.CollectionSearchResult;
 import de.dlr.shepard.common.search.io.ContainerSearchBody;
 import de.dlr.shepard.common.search.io.ContainerSearchResult;
 import de.dlr.shepard.common.search.io.ResponseBody;
 import de.dlr.shepard.common.search.io.SearchBody;
 import de.dlr.shepard.common.search.io.UserSearchBody;
 import de.dlr.shepard.common.search.io.UserSearchResult;
+import de.dlr.shepard.common.search.services.CollectionSearchService;
 import de.dlr.shepard.common.search.services.ContainerSearchService;
 import de.dlr.shepard.common.search.services.SearchService;
 import de.dlr.shepard.common.search.services.UserSearchService;
 import de.dlr.shepard.common.util.Constants;
-import de.dlr.shepard.common.util.QueryParamHelper;
+import de.dlr.shepard.common.util.PaginationHelper;
+import de.dlr.shepard.common.util.SortingHelper;
 import io.quarkus.logging.Log;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
@@ -41,17 +45,24 @@ public class SearchRest {
   @Context
   private SecurityContext securityContext;
 
-  private SearchService searcher;
-  private UserSearchService userSearcher;
-  private ContainerSearchService containerSearcher;
+  private SearchService searchService;
+  private UserSearchService userSearchService;
+  private ContainerSearchService containerSearchService;
+  private CollectionSearchService collectionSearchService;
 
   SearchRest() {}
 
   @Inject
-  public SearchRest(SearchService searcher, UserSearchService userSearcher, ContainerSearchService containerSearcher) {
-    this.searcher = searcher;
-    this.userSearcher = userSearcher;
-    this.containerSearcher = containerSearcher;
+  public SearchRest(
+    SearchService searchService,
+    UserSearchService userSearchService,
+    ContainerSearchService containerSearchService,
+    CollectionSearchService collectionSearchService
+  ) {
+    this.searchService = searchService;
+    this.userSearchService = userSearchService;
+    this.containerSearchService = containerSearchService;
+    this.collectionSearchService = collectionSearchService;
   }
 
   @POST
@@ -70,7 +81,51 @@ public class SearchRest {
     ) @Valid SearchBody body
   ) {
     Log.infof("Search for %s with query: %s", body.getSearchParams().getQueryType(), body.getSearchParams().getQuery());
-    ResponseBody ret = searcher.search(body, securityContext.getUserPrincipal().getName());
+    ResponseBody ret = searchService.search(body, securityContext.getUserPrincipal().getName());
+    return Response.ok(ret).build();
+  }
+
+  @POST
+  @Path("/" + Constants.COLLECTIONS)
+  @Tag(name = Constants.SEARCH)
+  @Operation(description = "Search collections")
+  @APIResponse(
+    description = "ok",
+    responseCode = "200",
+    content = @Content(schema = @Schema(implementation = CollectionSearchResult.class))
+  )
+  @APIResponse(description = "not found", responseCode = "404")
+  @Parameter(name = Constants.QP_PAGE)
+  @Parameter(name = Constants.QP_SIZE)
+  @Parameter(name = Constants.QP_ORDER_BY_ATTRIBUTE)
+  @Parameter(name = Constants.QP_ORDER_DESC)
+  public Response searchCollections(
+    @RequestBody(
+      required = true,
+      content = @Content(schema = @Schema(implementation = CollectionSearchBody.class))
+    ) @Valid CollectionSearchBody collectionSearchBody,
+    @QueryParam(Constants.QP_PAGE) Integer page,
+    @QueryParam(Constants.QP_SIZE) Integer size,
+    @QueryParam(Constants.QP_ORDER_BY_ATTRIBUTE) BasicContainerAttributes orderBy,
+    @QueryParam(Constants.QP_ORDER_DESC) Boolean orderDesc
+  ) {
+    Log.infof(
+      "Search for page %d and size %d of collections ordering by %s with query: %s",
+      page,
+      size,
+      orderBy,
+      collectionSearchBody.getSearchParams().getQuery()
+    );
+
+    PaginationHelper pagination = null;
+    if (page != null && size != null) pagination = new PaginationHelper(page, size);
+    SortingHelper sortingHelper = new SortingHelper(orderBy, orderDesc);
+    CollectionSearchResult ret = collectionSearchService.search(
+      collectionSearchBody,
+      pagination,
+      sortingHelper,
+      securityContext.getUserPrincipal().getName()
+    );
     return Response.ok(ret).build();
   }
 
@@ -107,12 +162,13 @@ public class SearchRest {
       containerSearchBody.getSearchParams().getQuery()
     );
 
-    var paginationParams = new QueryParamHelper();
-    if (page != null && size != null) paginationParams = paginationParams.withPageAndSize(page, size);
-    if (orderBy != null) paginationParams = paginationParams.withOrderByAttribute(orderBy, orderDesc);
-    ContainerSearchResult ret = containerSearcher.search(
+    PaginationHelper pagination = null;
+    if (page != null && size != null) pagination = new PaginationHelper(page, size);
+    SortingHelper sortingHelper = new SortingHelper(orderBy, orderDesc);
+    ContainerSearchResult ret = containerSearchService.search(
       containerSearchBody,
-      paginationParams,
+      pagination,
+      sortingHelper,
       securityContext.getUserPrincipal().getName()
     );
     return Response.ok(ret).build();
@@ -135,7 +191,7 @@ public class SearchRest {
     ) @Valid UserSearchBody userSearchBody
   ) {
     Log.infof("Search for users with query: %s", userSearchBody.getSearchParams().getQuery());
-    UserSearchResult ret = userSearcher.search(userSearchBody);
+    UserSearchResult ret = userSearchService.search(userSearchBody);
     return Response.ok(ret).build();
   }
 }
